<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue">

 <ScrollView
     android:id="@+id/point_scroll"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:scrollbars="none"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".ui.PointActivity">


   <TextView
       android:id="@+id/point_name"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       android:textColor="@color/logo_yellow"
       android:textSize="@dimen/title_size"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />

   <ImageView
       android:id="@+id/point_image"
       android:layout_width="0dp"
       android:layout_height="0dp"
       app:layout_constraintDimensionRatio="16:9"
       android:layout_margin="@dimen/margin_15"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_name"
       android:contentDescription="@string/contentdesc_point_image"
       app:srcCompat="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/point_location_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/margin_15"
        android:backgroundTint="@color/logo_yellow"
        android:text="@string/point_location"
        android:textSize="@dimen/small_button_text"
        android:textStyle="bold"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_image"/>

   <RelativeLayout
       android:id="@+id/point_desc_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_location_button">

    <TextView
        android:id="@+id/point_desc_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/point_desc_tag"
        android:textColor="@color/white"
        android:textSize="@dimen/subtitle_size"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/point_media_button"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        android:foreground="?android:attr/selectableItemBackground"
        android:contentDescription="@string/contentdesc_point_media"
        app:srcCompat="@drawable/media_logo" />
   </RelativeLayout>

   <TextView
       android:id="@+id/point_desc"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       android:textColor="@color/white"
       android:textSize="@dimen/text_size"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_desc_layout" />

   <TextView
       android:id="@+id/point_prop_tag"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       android:text="@string/point_prop_tag"
       android:textColor="@color/white"
       android:textSize="@dimen/subtitle_size"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_desc" />

   <TextView
       android:id="@+id/point_prop"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="@dimen/margin_15"
       android:textColor="@color/white"
       android:textSize="@dimen/text_size"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_prop_tag" />

   <Button
       android:id="@+id/point_visited_button"
       android:layout_width="match_parent"
       android:layout_height="@dimen/button_height"
       android:layout_margin="@dimen/margin_15"
       android:backgroundTint="@color/logo_yellow"
       android:text="@string/point_visited"
       android:textSize="@dimen/small_button_text"
       android:textStyle="bold"
       android:foreground="?android:attr/selectableItemBackground"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/point_prop"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

 </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>