...
    <string name="maps_warning_text">In order to use this application you need to have Google Maps installed.</string>
    <string name="home_partners_tag">PARTNERS</string>

    <!-- MENU -->
    <string name="menu_sos">SOS</string>
    <string name="menu_home">HOME</string>
    <string name="menu_trails">TRAILS</string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_logout">LOGOUT</string>

    <!-- LOGIN -->
    <string name="login_button">LOGIN</string>
    <string name="login_username">username</string>
...

    <!-- CONTENT DESCRIPTIONS -->
    <string name="contentdesc_logo_da_app">BraGuia logo.</string>
    <string name="contentdesc_logo_google_maps">Google Maps logo.</string>
    <string name="contentdesc_socials_logo">Social Media\'s logo.</string>
    <string name="contentdesc_point_image">Point of Interest image.</string>
    <string name="contentdesc_point_media">Point of Interest media button.</string>
    <string name="contentdesc_trail_image">Trail image.</string>

</resources>
